# pastehaste

./: .gitignore  README.md  package-lock.json  package.json  pastehaste copy.ahk  pastehaste top paste.ahk  pastehaste-4.27.26.ahk  pastehaste-copy-fix.ahk  pastehaste.ahk
src/: index.html  main.js  style.css
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: address.rs  hotkeys.rs  input.rs  lib.rs  main.rs  slots.rs
